Add compatibility for all macOS versions and ppc
Make it compilable in all versions of Xcode, all SDKs, all architectures (PowerPC, Intel, ARM).

Changes:

- Added separate Xcode project files for older versions of macOS. Separate project files makes them easier to compare. Each project has one target and builds to a separate folder in a build folder (when built with xcodebuild).
-- AllRez10.6 builds in Mac OS X 10.6. It builds 32-bit binaries for PowerPC and Intel which is required for Mac OS X 10.4 which has only 32-bit ApplicationServices.framework. It can build 64-bit Intel for Mac OS X 10.5 and later. For ppc64, the 10.5 SDK is required and it won't run for Mac OS X 10.4 or for Rosetta (but don't run AllRez for Rosetta since it doesn't do endian swap in some cases).
-- AllRez10.12 builds in OS X 10.12. This works for Mac OS X starting from 10.5. It can work for 10.4 if you remove the 64-bit binary.
-- AllRez builds in macOS 13. It builds 64-bit binaries for ARM and Intel which work with macOS versions starting from OS X 10.8 (though deployment target is 10.9).
-- All project files are Xcode version 3.1 so the file can be opened in older version of Xcode.

- Added MacOSMacros.h which determines the SDK version in case MAC_OS_X_VERSION_MAX_ALLOWED is insufficient (it's not always the same as the SDK version). SDK version is not needed for header files that have a version define but most do not.

- Added AppleMisc.cpp which does the following (among other things related to AppleMisc.h):
-- get the current Darwin and macOS Version. The macOS version may not be accurate if kern.osproductversion doesn't exist because in that case it guesses the macOS version from the Darwin version which might have a different minor version number. The best way to get macOS Version is probably from reading the SystemVersion.plist file.
-- UniversalI2CSendRequest is a version of I2CSendRequest that works in all MacOS versions for 32-bit and 64-bit.

- Added olderversions of iogdiagnos

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,24 @@
 DerivedData
 project.xcworkspace
 xcuserdata
+xcshareddata
 *.bc
 *.ii
 *.i
 *.s
+build
+*.mode1
+*.mode1v3
+*.pbxuser
+AllRez10.4.xcodeproj
+AllRez10.5.xcodeproj
+AllRez10.7.xcodeproj
+AllRez10.8.xcodeproj
+AllRez10.9.xcodeproj
+AllRez10.10.xcodeproj
+AllRez10.11.xcodeproj
+AllRez10.13.xcodeproj
+AllRez10.14.xcodeproj
+AllRez10.15.xcodeproj
+AllRez11.xcodeproj
+AllRez12.xcodeproj
