More projects to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ AllRez10.14.xcodeproj
 AllRez10.15.xcodeproj
 AllRez11.xcodeproj
 AllRez12.xcodeproj
+AllRez13.xcodeproj
+AllRez14.xcodeproj
+AllRez15.xcodeproj
